corpus/c/type/case-01/snapshots/gcc15/dual_sink_structured/render.ci.txt
src/main.c:5:22: error: [type_mismatch] passing argument 1 of 'takes_int' makes integer from pointer without a cast
want: int
got : const char *
via : takes_int
| src/main.c:5:22
|     return takes_int(value);
|                      ^
details: --formed-explain | raw: --formed-raw